--- a/WPFClient/WPFClient.csproj
+++ b/WPFClient/WPFClient.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\data_access\data_access.csproj" />
+  </ItemGroup>
+
 </Project>
